
package com.telusinternational.programacion.avanzada.unidad4.herencia;

/**
 *
 * @author Kenny
 */
public class Hablador {
    
    public void hablar(){
        System.out.println("Hola");
    }
    
}
