package com.telusinternational.programacion.avanzada.unidad4.herencia;

/**
 *
 * son un orden de aves que incluye aproximadamente 86 géneros con 372 especies
 * que se encuentran principalmente en las zonas tropicales y subtropicales. El
 * grupo fue bautizado por el nombre griego del loro ψιττακός «Psittakos», y por
 * ello el nombre de este orden significa «los que tienen forma de loro». El
 * orden se subdivide en tres superfamilias: Psittacoidea (los loros típicos o
 * papagayos), Cacatuoidea (las cacatúas) y Strigopoidea (los loros de Nueva
 * Zelanda)
 *
 * @author Kenny
 */
public class Psittaciforme extends Hablador{

    
}
