
package com.telusinternational.programacion.avanzada.unidad4.herencia;

/**
 *
 * @author Kenny
 */
public class Psittacoidea extends Psittaciforme{
    
}
