
package com.telusinternational.programacion.avanzada.unidad4.herencia;

/**
 *
 * @author Kenny
 */
public class Strigopoidea extends Psittaciforme{
    
}
