@startuml

class Hablador{
   # especie;
   + void hablar();
}
class Alumno{
    - carnet;
}

class Cacatuoidea

class HomoSapiens{
    # identificador;
    # fechaNacimiento;
    # nombre;
}

class Profesor{
    - codigoProfesor;
}

class Psittaciforme{
    + volar();
}

class Psittacoidea
class Strigopoidea

Hablador <|-- HomoSapiens : extends
Hablador <|--  Psittaciforme : extends

HomoSapiens <|-- Alumno : extends
HomoSapiens <|-- Profesor : extends

Psittaciforme <|-- Cacatuoidea  : extends
Psittaciforme <|-- Psittacoidea  : extends
Psittaciforme <|-- Strigopoidea  : extends


@enduml